[package]
name = "laptop_imager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = {version = "1.0.200", features = ["derive"] }
toml = {version = "0.8.12", features = ["parse"] }
which = "6.0.1"
